fixed eyesore on mobile

--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -10,5 +10,5 @@
 
 * {
     font-family: "Arial GEO", Helvetica, sans-serif;
-    font-size: 1.3rem;
+    font-size: 1.5vmax;
 }
